zoom no longer pixelates on safari/ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 body, html {
   margin: 0;
   touch-action: none;
+  background-color: black;
 }
