--- a/src/components/GridController/style.module.css
+++ b/src/components/GridController/style.module.css
@@ -1,10 +1,6 @@
 .container {
   position: fixed;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   height: 100vh;
   width: 100vw;
 }
@@ -13,12 +9,8 @@
     margin: 0;
 }
 
-.zoomContainer {
-}
-
 .zoom {
   display: block;
-  image-rendering: pixelated;
   transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
   transform-origin: top left;
 }
@@ -29,10 +21,21 @@
 }
 
 .cursor {
-    position: relative;
-    top: 0;
-    left: 0;
-    background-color: red;
-    position: absolute;
-    z-index: 999;
+  width: 1px;
+  height: 1px;
+  background-color: red;
+  z-index: 99;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 50px;
+  height: 50px;
+
+  border: 3px solid black;
+  padding: 5px;
+  background-clip: content-box;
+
+  transform-origin: top left;
+  transform: scale(2%, 2%) translate(-8px, -8px);
 }
